4.3.2 -> 4.4:
	- pentium3/pentium4 arch support (pluto@PLD).
	- cpuid() cleanups for PIC/non-PIC and gcc 3.4 (pluto@PLD).
	- rpmGlob() is now locale independent (wiget@PLD).
	= add type to tag array.

4.3.1 -> 4.3.2:
	- use /etc/selinux/targeted/contexts/files/file_contexts for now.
	- disable file contexts into package metadata during build.
	- fix: "/path/foo.../bar" was losing a dot (#123844).
	- lua embedded in rpmio.
	- use lua to identify desired selinux file context regexes.
	- add 'requires' and 'conflicts' tag aliases.
	- python: return ds, not tuple, for ds iteration.
	- python: permit integer keys to ts.dbMatch().
	- xml: use <foo/> markup for empty tags.
	- xml: <integer/> instead of <integer>0</integer> markup.
	- fix: disable fingerprint generation on kernel paths.
	- add ppc8[25]60 arches.

4.3 -> 4.3.1:
	- fix: don't add leading space to %* argv expansion (#119059).
	- scareMem = 0 everywhere, document deprecation phase out.
	- fix: add u+w to FIXPERMS.
	- add buildtime to rpmds, methods to retrieve.
	- python: hide labelCompare() underneath ds.cmp(a,b).
	- fix: segfault on --recontext if file_contexts unreadable (#117374).
	- fix: /etc/security/selinux/file_contexts is default path.
	- fix: no transaction lock if --test was specified (#119783).
	- perl: skip new-fangled head[34] while generating deps (#118243).
	- perl: use __perl for perl variable macros (#115156).
	- make peace with libtool-1.5.6.
	- fix: follow current is_selinux_enabled() return (#121004).
	? fix: exit fail when erasing multiple identical packages (#120519).
        - add aurora/sparc patches (#124469).
	- use poll(2) if available, avoid borked aurora/sparc select (#124574).

4.2.2 -> 4.3:
	- upgrade to zlib-1.2.beta7.
	- fix: short option help missing string terminator.
	- permit secondary tag match patterns with RPMQV_ALL.
	- fix: cut-n-paste error setting nopromote for Conflicts: (#81965).
	- don't use error string after gzclose (Dmitry V. Levin).